# archSnap

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/archsnap/: __init__.py  __main__.py  config.py  custom_types.py  main.py
src/archsnap/data/: artefact_scene.blend
src/archsnap/gui/: __init__.py  init_gui.py
src/archsnap/mesh/: __init__.py  mesh.py
