[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'archSnap'
version = '0.1.4'
description = 'A package for the archSnap visualisation generator'
authors = [
    { name='Jordy Didier Orellana Figueroa' }
]
readme = 'README.md'
requires-python = '>=3.11.0'
license = 'GPL-3.0-or-later'
license-files = [
    'LICENSE',
]
classifiers=[
        'Programming Language :: Python :: 3.11',
        'Development Status :: 4 - Beta',
        'Operating System :: OS Independent',
        'Topic :: Multimedia :: Graphics :: 3D Rendering',
]
dependencies = [
    'bpy>=5.0.0'
]

[project.urls]
Repository = "https://github.com/ac-jorellanaf/archSnap"

[tool.distutils.egg_info]
egg_base = 'build'

[tool.setuptools.package-data]
'archsnap.data' = ['*.*']
'archsnap.config' = ['config.ini']

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
no_site_packages = false
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
